syntax = "proto3";

option go_package = "/event";

package event;

message EventUserLogin {
  enum Result {
    RESULT_UNSPECIFIED = 0;
    RESULT_SUCCESS = 1;
    RESULT_INCORRECT_CREDENTIAL = 2;
    RESULT_UNKNOWN = 3;
  }

  int64 user_id = 1;
  Result result = 2;
}

message EventUserCreate {
  int64 user_id = 1;
  string email = 2;
}
