syntax = "proto3";

option go_package = "github.com/ikithomas/iki-proto/ikipb/iki_iam";

package iam;

message User {
  string id = 1;
  string email = 2;
  string given_name = 3;
  string family_name = 4;
  bool group_owner = 5;
  bool group_admin = 6;
  bool group_user = 7;
}

message Group {
  string id = 1;
  string name = 2;
}
